--- a/api/composer.json
+++ b/api/composer.json
@@ -7,6 +7,7 @@
     },
     "require": {
         "php": "8.*",
-        "firebase/php-jwt": "^6.1"
+        "firebase/php-jwt": "^6.1",
+        "zircote/swagger-php": "^4.3"
     }
 }
